--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-tailwind",
   "version": "0.1.0",
+  "homepage": "https://aymenbz.github.io/react-tailwind-landing",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -16,7 +17,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
-    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
+    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
+    "predeploy": "gh-pages -d build",
+    "deploy": "gh-pages -b gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
