--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,13 @@
 /node_modules
 /.pnp
 .pnp.js
-
+.yarn.lock
 # testing
 /coverage
 
 # production
 /build
-./src/assets/tailwind.css
+/src/assets/tailwind.css
 # misc
 .DS_Store
 .env.local
