--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "eject": "react-scripts eject",
     "build:css": "postcss src/assets/tailwind.src.css -o src/assets/tailwind.css",
     "watch:css": "postcss src/assets/tailwind.src.css -o src/assets/tailwind.css",
-    "predeploy": "gh-pages -d build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -b gh-pages -d build"
   },
   "eslintConfig": {
